<resources>
    <string name="app_name">The-History-App</string>
    <string name="button">Button</string>
    <string name="enter_age">Enter Age</string>
    <string name="textview">TextView</string>
    <string name="clear">Clear</string>
    <string name="generatehistory">GenerateHistory</string>
    <string name="entertheage">EnterTheAge</string>
    <string name="studentAge" />
    <string name="enter_the_age">Enter_The_Age</string>
</resources>