<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/the_history_app__1_"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="54dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="@font/acme"
        android:text="@string/enter_age"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="196dp"
        android:layout_height="234dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="117dp"
        android:fontFamily="@font/acme"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="150dp"
        android:text="@string/clear"
        android:textColor="#69E412"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_the_age"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/studentAge"
        android:textColor="#F8F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button"
        android:layout_width="113dp"
        android:layout_height="72dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="148dp"
        android:text="@string/generatehistory"
        android:textColor="#00FF0C"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#802525"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>